--- a/crew/crew.html
+++ b/crew/crew.html
@@ -27,49 +27,69 @@
 			<div class="container1">
 				<img src="../images/img_avatar.png" alt="Avatar" class="image1">
 				<div class="overlay1">
-					<div class="text1">Hello World</div>
+					<div class="text1">Αγγλικά <br> <br> Ευαγγελία Βασδέκη</div>
 				</div>
 			</div>
 	
 			<div class="container2">
 				<img src="../images/img_avatar.png" alt="Avatar" class="image2">
 				<div class="overlay2">
-					<div class="text2">Hello World</div>
+					<div class="text2">Αγγλικά Υπεύθυνη ροής προγράμματος <br> <br> Νινέτα Τζιότζια</div>
 				</div>
 			</div>
 	
 			<div class="container3">
 				<img src="../images/img_avatar.png" alt="Avatar" class="image3">
 				<div class="overlay3">
-					<div class="text3">Hello World</div>
+					<div class="text3">Αγγλικά <br> <br> Χρύσα Πιππή</div>
 				</div>
 			</div>
 			<div class="container4">
 				<img src="../images/img_avatar.png" alt="Avatar" class="image4">
 				<div class="overlay4">
-					<div class="text4">Hello World</div>
+					<div class="text4">Αγγλικά <br> <br> Rosemary Tanner</div>
 				</div>
 			</div>
 			<div class="container5">
 				<img src="../images/img_avatar.png" alt="Avatar" class="image5">
 				<div class="overlay5">
-					<div class="text5">Hello World</div>
+					<div class="text5">Γαλλικά <br> Αγγλικά <br> <br> Γιώργος Τσοποτός</div>
 				</div>
 			</div>
 			<div class="container6">
 				<img src="../images/img_avatar.png" alt="Avatar" class="image6">
 				<div class="overlay6">
-					<div class="text6">Hello World</div>
+					<div class="text6">Γερμανικά <br> <br> Γιάννης Δημητριάδης</div>
 				</div>
 			</div>
 			<div class="container7">
 				<img src="../images/img_avatar.png" alt="Avatar" class="image7">
 				<div class="overlay7">
-					<div class="text7">Hello World</div>
+					<div class="text7">Ιταλικά <br> <br> Νατάσα Στάθη</div>
+				</div>
+			</div>
+			<div class="container8">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image8">
+				<div class="overlay8">
+					<div class="text8">Ισπανικά <br> <br> Laura Sust Farriol</div>
+				</div>
+			</div>
+			<div class="container9">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image9">
+				<div class="overlay9">
+					<div class="text9">Ρωσικά <br> <br> Τίνα Κουτρουλή</div>
+				</div>
+			</div>
+			<div class="container10">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image10">
+				<div class="overlay10">
+					<div class="text10">Κινεζικά Τουρκικά <br> <br> Ξένια Σαρρή</div>
 				</div>
 			</div>
 		</div>
-		
+		<br> <br>
+		<h2>Διεύθυνση: Βασδέκη Ευαγγελία, Παπακυρίτση Άλκη</h1>
+		<br> <br>
 	</main>
 	
 
