--- a/lang/languages.html
+++ b/lang/languages.html
@@ -125,7 +125,7 @@
 		<div class="spa_text">
 			<div id="spa">
 				<h1>Γιατί να μάθω Ισπανικά;</h1>
-				<p>- Η κατανόηση των Ισπανικών θα προσδώσει  μια καλύτερη κατανόηση της Λατινικής και των επιδράσεών της σε όλες τις ευρωπαϊκές γλώσσες</p>
+				<p>- Είναι η δεύτερη πιο διαδεδομένη γλώσσα στον πλανήτη! Ομιλείται από 500.000.000 ανθρώπους.</p>
 				<p>- Τα ισπανικά είναι  100% φωνητική γλώσσα. Οι λέξεις προφέρονται ακριβώς όπως γράφονται και γράφονται ακριβώς όπως προφέρονται. Όταν μαθαίνεις μια ξένη γλώσσα αυτό είναι το πολυτιμότερο που μπορείς να έχεις.</p>
 				<p>- Σε αντίθεση με  τις άλλες γλώσσες, στα Ισπανικά παρατηρούμε ελάχιστες εξαιρέσεις.</p>
 				<p>- Μαθαίνοντας Ισπανικά θα πειστείς ότι μπορείς τελικά να μάθεις μια ξένη γλώσσα, και ίσως σου δώσει την αυτοπεποίθηση να δοκιμάσεις την τύχη σου σε μια άλλη δυσκολότερη!</p>
@@ -152,7 +152,7 @@
 		</button>
 		<div class="tur_text">
 			<div id="tur">
-				<h1>Γιατί να μάθω Τούρκικα;</h1>
+				<h1>Γιατί να μάθω Τουρκικά;</h1>
 				<p>- Η Τουρκική γλώσσα εξελίσσεται ολοένα και περισσότερο στη χώρα μας. Τα τουρκικά είναι γλώσσα που έχει ως χαρακτηριστικό τις οικείες λέξεις απ’ τα σύγχρονα ελληνικά.</p>
 				<p>- Σκοπός της διδασκαλίας της τουρκικής γλώσσας είναι να φέρουμε τους μαθητές μας σε επαφή με την ιστορία, την κουλτούρα και τον πολιτισμό της Τουρκίας, έννοιες οι οποίες είναι άρρηκτα συνδεδεμένες με την ορθή κατάκτηση μιας γλώσσας.</p>
 				<p>- Η γειτνίαση της χώρας μας με την Τουρκία, οι προσπάθειες ένταξης της στην Ευρωπαϊκή Ένωση και η έκρηξη του διεθνούς εμπορίου έχουν συμβάλλει καταλυτικά ώστε να βελτιωθούν και να ενισχυθούν οι σχέσεις μεταξύ των δύο χωρών, ιδιαίτερα στον εμπορικό και τον τουριστικό τομέα.</p>
@@ -165,15 +165,15 @@
 		</button>
 		<div class="russ_text">
 			<div id="rus">
-				<h1>Γιατί να μάθω Ρώσικα;</h1>
-				<p>- Η ρωσική γλώσσα είναι μια πλούσια και πολύ όμορφη γλώσσας, η
+				<h1>Γιατί να μάθω Ρωσικά;</h1>
+				<p>- Η ρωσική γλώσσα είναι μια πλούσια και πολύ όμορφη γλώσσα, η
 					οποία έχει πολλές ομοιότητες με την ελληνική, ειδικά στη δομή της
 					γραμματικής και του συντακτικού, κάτι το οποίο διευκολύνει τους
 					Έλληνες σπουδαστές στην προσπάθειά τους να μάθουν ρωσικά.</p>
 					<p>- Γιατί την  Ρωσία και την Ελλάδα ενώνουν πολλά πράγματα όπως κοινή
 						θρησκεία και ιστορία.</p>
 					<p>- Η γνώση της ρωσικής γλώσσας είναι απαραίτητη για εισαγωγή στα ΑΕΙ της
-						Ρωσίας και ως γνωστών τα ρωσικά Πανεπιστήμια διατηρούν σταθερά τις
+						Ρωσίας και, ως γνωστόν, τα ρωσικά Πανεπιστήμια διατηρούν σταθερά τις
 						πρώτες θέσεις παγκοσμίως στην ποιότητα της εκπαίδευσης σε όλες τις
 						ειδικότητες.</p>
 			</div>
@@ -185,16 +185,16 @@
 		</button>
 		<div class="chi_text">
 			<div id="chi">
-				<h1>Γιατί να μάθω Κινέζικα;</h1>
+				<h1>Γιατί να μάθω Κινεζικά;</h1>
 				<p>- Ομιλείται από το ¼ του παγκόσμιου πληθυσμού.
 					Η νέα παγκόσμια τάση καθιστά τα κινέζικα ως μία από τις δημοφιλέστερες
 					γλώσσες με την ταχύτερη ανάπτυξη.</p>
-				<p>- Τα κινέζικα είναι η ταχύτερα αναπτυσσομένη γλώσσα στον κόσμο και εξελίσσεται στη
-					γλώσσα του εμπορίου και των επιχειρήσεων. Μεγάλες εταιρίες θεωρούν τα κινέζικα ως ένα
+				<p>- Τα κινεζικά είναι η ταχύτερα αναπτυσσομένη γλώσσα στον κόσμο και εξελίσσεται στη
+					γλώσσα του εμπορίου και των επιχειρήσεων. Μεγάλες εταιρίες θεωρούν τα κινεζικά ως ένα
 					βασικό προσόν για τους εργαζόμενους που πρόκειται να προσλάβουν.</p>
-				<p>- Μέσω της γλώσσας, έρχεσαι σε τριβή με ένα αξιοθαύμαστο πολιτισμό πολύ διαφορετικό από
+				<p>- Μέσω της γλώσσας, έρχεσαι σε επαφή με ένα αξιοθαύμαστο πολιτισμό πολύ διαφορετικό από
 					αυτόν που συναντάει κανείς στη Δύση. Καθένα από τα σύμβολα τα οποία χρησιμοποιούνται
-					στην κινέζικη γλώσσα είναι ένα μικρό ταξίδι στο χρόνο!</p>
+					στην κινεζική γλώσσα είναι ένα μικρό ταξίδι στο χρόνο!</p>
 			</div>
 		</div>
 
