--- a/index.html
+++ b/index.html
@@ -11,11 +11,34 @@
         <link rel="stylesheet" href="/css/footer.css">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="sortcut icon" type="image/png" href="images/icon.png">
+        <link rel="sortcut icon" type="image/png" href="images/icon.png">
+
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                $("#myModal").modal('show');
+            });
+        </script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
+        <!-- ATTEMPT FOR BOOTSTRAP MODAL -->
+        <div id="myModal" class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Καλοκαιρινή Προσφορά!</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Μέχρι 20 Αυγούστου, A και Β junior με 150€ ανα τάξη!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <header class="header">
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
