Fixed footer and contact and added a button in modal

--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
         <div id="myModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         <h4 class="modal-title">Καλοκαιρινή Προσφορά!</h4>
                     </div>
                     <div class="modal-body">
                         <p>Μέχρι 31 Αυγούστου, A και Β junior με 150€ ανα τάξη!</p>
                     </div>
+                    <button class="more">
+                        <span><a href="offers/offers.html">Μάθε Περισσότερα</a> </span>  
+                    </button>
                 </div>
             </div>
         </div>
