Fixed footer and slideshow fow mobile

--- a/lang/languages.html
+++ b/lang/languages.html
@@ -31,43 +31,44 @@
 		<h1>Γλώσσες</h1>
 		<br><br>
 		<div class="slideshow_container">
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/big-ben.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/tower_bridg.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/eiffel_tower.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/louvre.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/cirt.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/gate.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/madrid.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/colosseum.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/trevi.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/turkey.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/russia.jpg" style="width: 100%;">
 			</div>
-			<div class="mySlides fade">
+			<div class="mySlides fade shadow">
 				<img src="../images/en/china.jpg" style="width: 100%;">
 			</div>
 		</div>
+
 
 		<!-- English -->
 		<button class="english" onclick="langs_eng()">
