--- a/offers/offers.html
+++ b/offers/offers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,60 +10,71 @@
 	<link rel="stylesheet" href="../css/nav.css">
 	<link rel="stylesheet" href="../css/shadow.css">
 	<link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="offers.css">
-  <link rel="stylesheet" href="../css/footer.css">
+	<link rel="stylesheet" href="offers.css">
+	<link rel="stylesheet" href="../css/footer.css">
 
 	<title>Προσφορές</title>
 </head>
+
 <body>
 
-    <script src="../js/header.js"></script>
-    <script src="../js/mobile.js"></script>
-    
-    <main class="content shadow">
-        <h1 class="title2">Προσφορές</h1>
-        <h2 class="title_text">Επιλέξτε την προσφορά που σας ταιριάζει, ανάλογα την ηλικία και την περίοδο που σας ενδιαφέρει. Στην Ξενόγλωσση Παιδεία προσπαθούμε το καλύτερο για εσάς, την παρέα και το οικογενειακό σας περιβάλλον!</h2>
-        
-        <div class="gen_offers">
-			    <h2>Γενικές</h2>
+	<script src="../js/header.js"></script>
+	<script src="../js/mobile.js"></script>
+
+	<main class="content shadow">
+		<h1 class="title2">Προσφορές</h1>
+		<h2 class="title_text">Επιλέξτε την προσφορά που σας ταιριάζει, ανάλογα την ηλικία και την περίοδο που σας
+			ενδιαφέρει. Στην Ξενόγλωσση Παιδεία προσπαθούμε το καλύτερο για εσάς, την παρέα και το οικογενειακό σας
+			περιβάλλον!</h2>
+
+		<div class="gen_offers">
+			<h2>Γενικές</h2>
 		</div>
-        <div class="gen_text">
-          	<p>- Όλες οι γλώσσες με 35€ το μήνα!(Αρχάριοι) </p>
+		<div class="gen_text">
+			<p>- Όλες οι γλώσσες με 35€ το μήνα!(Αρχάριοι) </p>
 		</div>
 		<div class="kids_offers">
 			<h2>Για μαθητές</h2>
 		</div>
 		<div class="kids_text">
 			<p>- A junior και B junior με 150€ ανά τάξη έως 31 Αυγούστου!</p>
-			<p>- Για δεύτερη ξένη γλώσσα 50% έκπτωση  για όλους τους καινούριους μαθητές μας!</p>
+			<p>- Για δεύτερη ξένη γλώσσα 50% έκπτωση για όλους τους καινούριους μαθητές μας!</p>
 			<p>- Για όλα τα μέλη της ίδιας οικογένειας 50% έκπτωση για όλους τους καινούριους μαθητές μας!</p>
 		</div>
-        <div class="students_offers">
+		<div class="students_offers">
 			<h2>Για φοιτητές</h2>
 		</div>
-        <div class="students_text">
+		<div class="students_text">
 			<p>- Lower(B1-B2) 48€ μηνιαίως!</p>
 			<p>- Proficiency(C1-C2) 55€ μηνιαίως!</p>
 			<p>- TOEFL, GMAT, GRE με 50€ το μήνα!</p>
 			<p>- IELTS σε ένα μήνα με 50€.</p>
-        </div>
-        <div class="adults_offers">
+		</div>
+		<div class="adults_offers">
 			<h2>Για ενήλικες-εκπαιδευτικούς και δημοσίους υπαλλήλους</h2>
 		</div>
-        <div class="adults_text">
+		<div class="adults_text">
 			<p>- Άμεση μοριοδότηση σε διαγωνισμούς ΑΣΕΠ. </p>
 			<p>- Lower(B1-B2) 48€ μηνιαίως!</p>
 			<p>- Proficiency(C1-C2) 55€ μηνιαίως!</p>
-        </div>
-		<br><br><br>
-    </main>
+		</div>
+		<br>
+		<br>
+		<br>
+	</main>
 
-    <footer>
+	<br>
+	<br>
+	<br>
+	
+
+	<footer>
 		<script src="/js/footer.js"></script>
 	</footer>
-	
-    <script src="../js/menu.js"></script>
 
-	
+	<script src="../js/menu.js"></script>
+
+
 </body>
+
 </html>
