--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" href="css/footer.css">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="sortcut icon" type="image/png" href="images/icon.png">
@@ -206,11 +206,11 @@
         </div>
 
         <footer>
-            <script src="/js/footer.js"></script>
+            <script src="js/footer.js"></script>
         </footer>
 
         <script src="js/menu.js"></script>
-        <script src="../js/slide.js"></script>
+        <script src="js/slide.js"></script>
 
     </body>
     
