--- a/contact/contact.html
+++ b/contact/contact.html
@@ -33,7 +33,7 @@
 
 			<textarea name="message" class="form_control" placeholder="Μήνυμα" rows="5" required></textarea><br>
 			<br><br>
-			<input type="submit" name="" class="form_control submit" value="ΑΠΟΣΤΟΛΗ">
+			<input type="submit" class="form_control submit" value="ΑΠΟΣΤΟΛΗ">
 		</form>
 	<!-- </div> -->
 
