--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <div class="modal-body">
                         <p>Μέχρι 31 Αυγούστου, A και Β junior με 150€ ανα τάξη!</p>
                     </div>
-                    <button class="more">
+                    <div class="more">
                         <span><a href="offers/offers.html">Μάθε Περισσότερα για τις προσφορές μας!</a> </span>  
-                    </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
 
         <!-- Mobile menu -->
         <div class="topnav">
-            <ul id="mobile">
+            <div id="mobile">
                 <a href="index.html">
                     <h1 id="home">Αρχική</h1>
                 </a>
@@ -110,7 +110,7 @@
                 </a>
                 <br>
                 <br>
-            </ul>
+            </div>
         </div>
         
 
@@ -130,76 +130,76 @@
             <div class="photos">
                 <div class="slideshow_container">
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10628731_374272426054307_2430048668187180049_o.jpg" style="width: 100%;">
+                        <img src="images/london/10628731_374272426054307_2430048668187180049_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10648953_374271009387782_8245721183467742824_o.jpg" style="width: 100%;">
+                        <img src="images/london/10648953_374271009387782_8245721183467742824_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10344389_416953718452844_6872962222647172409_o.jpg" style="width: 100%;">
+                        <img src="images/london/10344389_416953718452844_6872962222647172409_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10363446_374275039387379_9036972054288986725_o.jpg" style="width: 100%;">
+                        <img src="images/london/10363446_374275039387379_9036972054288986725_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10368333_332576336890583_9033133087362638925_o.jpg" style="width: 100%;">
+                        <img src="images/london/10368333_332576336890583_9033133087362638925_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10431390_409700739178142_7946304490084911877_o.jpg" style="width: 100%;">
+                        <img src="images/london/10431390_409700739178142_7946304490084911877_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10448583_332576496890567_6950901634041819330_o.jpg" style="width: 100%;">
+                        <img src="images/london/10448583_332576496890567_6950901634041819330_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10480555_332576473557236_23882003399955087_o.jpg" style="width: 100%;">
+                        <img src="images/london/10480555_332576473557236_23882003399955087_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10524264_374275582720658_69009610307703673_o.jpg" style="width: 100%;">
+                        <img src="images/london/10524264_374275582720658_69009610307703673_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10536500_374279689386914_8270812359012262068_o.jpg" style="width: 100%;">
+                        <img src="images/london/10536500_374279689386914_8270812359012262068_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10540716_374275359387347_1016847408952238444_o.jpg" style="width: 100%;">
+                        <img src="images/london/10540716_374275359387347_1016847408952238444_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10548308_374271176054432_4961587496479146891_o.jpg" style="width: 100%;">
+                        <img src="images/london/10548308_374271176054432_4961587496479146891_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10648953_374271009387782_8245721183467742824_o.jpg" style="width: 100%;">
+                        <img src="images/london/10648953_374271009387782_8245721183467742824_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10658882_374275509387332_1114110264532500944_o.jpg" style="width: 100%;">
+                        <img src="images/london/10658882_374275509387332_1114110264532500944_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10659120_374271596054390_887566862485063547_o.jpg" style="width: 100%;">
+                        <img src="images/london/10659120_374271596054390_887566862485063547_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10662132_374275839387299_3104791737731181581_o.jpg" style="width: 100%;">
+                        <img src="images/london/10662132_374275839387299_3104791737731181581_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10668882_374271572721059_6889100756138877159_o.jpg" style="width: 100%;">
+                        <img src="images/london/10668882_374271572721059_6889100756138877159_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10688252_374271209387762_6593400900855122221_o.jpg" style="width: 100%;">
+                        <img src="images/london/10688252_374271209387762_6593400900855122221_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10688294_374272226054327_6555348364894596045_o.jpg" style="width: 100%;">
+                        <img src="images/london/10688294_374272226054327_6555348364894596045_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10694297_374271466054403_8754710933292557043_o.jpg" style="width: 100%;">
+                        <img src="images/london/10694297_374271466054403_8754710933292557043_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10697401_374276266053923_4032610956736430157_o.jpg" style="width: 100%;">
+                        <img src="images/london/10697401_374276266053923_4032610956736430157_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10703658_374271002721116_2282317536976050779_n.jpg" style="width: 100%;">
+                        <img src="images/london/10703658_374271002721116_2282317536976050779_n.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/1077330_374276346053915_7178768293507834699_o.jpg" style="width: 100%;">
+                        <img src="images/london/1077330_374276346053915_7178768293507834699_o.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10857074_416953118452904_8380038097042888234_o.jpg" style="width: 100%;">
+                        <img src="images/london/10857074_416953118452904_8380038097042888234_o.jpg" style="width: 100%;" alt="image">
                     </div>
                 </div>
             </div>
