--- a/lang/languages.html
+++ b/lang/languages.html
@@ -32,47 +32,47 @@
 		<br><br>
 		<div class="slideshow_container">
 			<div class="mySlides fade shadow">
-				<img src="../images/en/big-ben.jpg" style="width: 100%;">
+				<img src="../images/en/big-ben.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/tower_bridg.jpg" style="width: 100%;">
+				<img src="../images/en/tower_bridg.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/eiffel_tower.jpg" style="width: 100%;">
+				<img src="../images/en/eiffel_tower.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/louvre.jpg" style="width: 100%;">
+				<img src="../images/en/louvre.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/cirt.jpg" style="width: 100%;">
+				<img src="../images/en/cirt.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/gate.jpg" style="width: 100%;">
+				<img src="../images/en/gate.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/madrid.jpg" style="width: 100%;">
+				<img src="../images/en/madrid.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/colosseum.jpg" style="width: 100%;">
+				<img src="../images/en/colosseum.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/trevi.jpg" style="width: 100%;">
+				<img src="../images/en/trevi.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/turkey.jpg" style="width: 100%;">
+				<img src="../images/en/turkey.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/russia.jpg" style="width: 100%;">
+				<img src="../images/en/russia.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/china.jpg" style="width: 100%;">
+				<img src="../images/en/china.jpg" style="width: 100%;" alt="image">
 			</div>
 		</div>
 
 
 		<!-- English -->
 		<button class="english" onclick="langs_eng()">
-			<h2>ΑΓΓΛΙΚΑ</h2>
+			ΑΓΓΛΙΚΑ
 		</button>
 		<div class="eng_text">
 			<div id="eng">
@@ -92,7 +92,7 @@
 
 		<!-- French -->
 		<button class="french" onclick="langs_fre()">
-			<h2>ΓΑΛΛΙΚΑ</h2>
+			ΓΑΛΛΙΚΑ
 		</button>
 		<div class="fre_text">
 			<div id="fre">
@@ -107,7 +107,7 @@
 
 		<!-- German -->
 		<button class="german" onclick="langs_ger()">
-			<h2>ΓΕΡΜΑΝΙΚΑ</h2>
+			ΓΕΡΜΑΝΙΚΑ
 		</button>
 		<div class="ger_text">
 			<div id="ger">
@@ -121,7 +121,7 @@
 
 		<!-- Spanish -->
 		<button class="spanish" onclick="langs_spa()">
-			<h2>ΙΣΠΑΝΙΚΑ</h2>
+			ΙΣΠΑΝΙΚΑ
 		</button>
 		<div class="spa_text">
 			<div id="spa">
@@ -135,7 +135,7 @@
 
 		<!-- Italian -->
 		<button class="italian" onclick="langs_ita()">
-			<h2>ΙΤΑΛΙΚΑ</h2>
+			ΙΤΑΛΙΚΑ
 		</button>
 		<div class="ita_text">
 			<div id="ita">
@@ -149,7 +149,7 @@
 
 		<!-- Turkish -->
 		<button class="turkish" onclick="langs_tur()">
-			<h2>ΤΟΥΡΚΙΚΑ</h2>
+			ΤΟΥΡΚΙΚΑ
 		</button>
 		<div class="tur_text">
 			<div id="tur">
@@ -162,7 +162,7 @@
 
 		<!-- Russian -->
 		<button class="russian" onclick="langs_rus()">
-			<h2>ΡΩΣΙΚΑ</h2>	
+			ΡΩΣΙΚΑ
 		</button>
 		<div class="russ_text">
 			<div id="rus">
@@ -182,7 +182,7 @@
 		
 		<!-- Chinese -->
 		<button class="chinese" onclick="langs_chi()">
-			<h2>ΚΙΝΕΖΙΚΑ</h2>
+			ΚΙΝΕΖΙΚΑ
 		</button>
 		<div class="chi_text">
 			<div id="chi">
