--- a/lang/languages.html
+++ b/lang/languages.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="languages_style.css">
 	<link rel="stylesheet" href="../css/fade.css">
 	<link rel="stylesheet" href="../css/footer.css">
-
+	<link rel="sortcut icon" type="image/png" href="../images/icon.png">
 	<!-- <script src="../js/slide.js"></script> -->
 
 	<link rel="sortcut icon" type="image/png" href="images/icon.png">
