--- a/offers/offers.html
+++ b/offers/offers.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="offers.css">
 	<link rel="stylesheet" href="../css/footer.css">
-
+	<link rel="sortcut icon" type="image/png" href="../images/icon.png">
 	<title>Προσφορές</title>
 </head>
 
