--- a/crew/crew.html
+++ b/crew/crew.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="crew_style.css">
 	<link rel="stylesheet" href="../css/footer.css">
-	<link rel="sortcut icon" type="image/png" href="../images/icon.png">
+	<link rel="sortcut icon" type="image/png" href="../images/favicon.ico">
 	<title>Καθηγητές</title>
 </head>
 <body>
