--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../css/shadow.css">
 	<link rel="stylesheet" href="contact_style.css">
 	<link rel="stylesheet" href="../css/footer.css">
-	<link rel="sortcut icon" type="image/png" href="../images/icon.png">
+	<link rel="sortcut icon" type="image/png" href="../images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
