--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 $("#myModal").modal('show');
             });
         </script>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Ξενόγλωσση παιδεία - Φροντιστήρια Αγγλικών Ιταλικών Γαλλικών Γερμανικών Ισπανικών Κινεζικών Ρωσικών Τουρκικών Βόλος, ξένες γλώσσες στο βόλο.">
+        <meta name="keywords" content="ξενόγλωσση παιδεία, φροντιστήρια αγγλικών, φροντιστήρια ιταλικών, φροντιστήρια γαλλικών, φροντιστήρια γερμανικών, φροντιστήρια ισπανικών, φροντιστήρια κινεζικών, φροντιστήρια ρωσικών, φροντιστήρια τουρκικών, βόλος, ξένες γλώσσες στο βόλο, ξενες γλωσσες στο βολο, που να μάθω ξένες γλώσσες στο βόλο, φροντιστήρια ξένων γλωσσών, αγγλικά, γαλλικά, γερμανικά, ιταλικά, ισπανικά, ρωσικά, τουρκικά">
+        <meta name="author" content="Maria Pantazi, Nikos Chatzivangelis">
     </head>
 
     <body>
